// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperValidators register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3620,
  "gasUsed": 726142,
}
`;

exports[`KeeperValidators register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3620,
  "gasUsed": 634591,
}
`;

exports[`KeeperValidators register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1444,
  "gasUsed": 363575,
}
`;

exports[`KeeperValidators register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1412,
  "gasUsed": 309308,
}
`;

exports[`KeeperValidators update exit signatures succeeds 1`] = `
Object {
  "calldataByteLength": 964,
  "gasUsed": 141517,
}
`;
